# ky_spider

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  README_DOCKER.md  README_WEB.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  setup.sh  web_app.py
src/: config.py  processor.py  scraper.py  table.py  utils.py  validator.py
src/application/: services.py  use_cases.py
src/domain/: entities.py  exceptions.py  repositories.py  services.py
src/infrastructure/: chinese_converter.py  data_processing.py  file_system.py  logging.py  validation.py  web_scraping.py
src/interfaces/: cli.py
templates/: index.html
