[project]
name = "keying-spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "html5lib>=1.1",
    "lxml>=5.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "playwright>=1.52.0",
]
